# FinanceBuddy

./: README.md
Agentic-Finance-Firm/: agent.py  langgraph.json  pyproject.toml  requirements.txt
Agentic-Finance-Firm/scripts/: base_tools.py  rag_tools.py  yahoo_mcp.py
Agentic_rag_ingestion/: 1) Docling Data Extraction.ipynb  2) Image Descriptions.ipynb  3) Final Data Ingestion for Deep RAG.ipynb
